client/src/styles/_inbox.scss
SECTION {
    margin: 70px 0;
}

BODY.modal-open {
    overflow: visible !important;
}

.flight-Navbar .showWelcomeButton {
    A {
        height: 50px;
    }
    margin-right: -7px;
    .flight-icon {
        line-height: 50%;
        padding-top: 2px;
        padding-bottom: 2px;
    }
}

